# SensorTag2650

./: .travis.yml  CMakeLists.txt  README.md
include/: filepaths.h  filepaths.h~  key.h  socket_client.h
src/: sensortag.cpp  socket_client.cpp  thingspeak_hour_update.cpp  thingspeak_minute_update.cpp
